--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+**/.idea
 .DS_Store
 node_modules
 *.log
@@ -122,7 +123,9 @@ env/
 venv/ 
 ENV/ 
 env.bak/ 
-venv.bak/ 
+venv.bak/
+**/venv
+**/env
 
 # mkdocs documentation 
 /site 
